--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -43,7 +43,7 @@ selection:
   save_to_clipboard: false
 
 shell:
-  program: /usr/bin/zsh
+  program: /bin/fish
 
 key_bindings:
   - { key: Return, mods: Super|Shift, action: SpawnNewInstance }
