--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -141,15 +141,15 @@ label = %percentage:2%%
 [module/network]
 type = internal/network
 interval = 5
-interface = wlan0
+interface = wlo1
 format-connected = <ramp-signal>
-label-disconnected = 󰱪 
+label-disconnected = 󰤭 
 label-disconnected-foreground = #ff0000
-ramp-signal-0 = 󰱪
-ramp-signal-1 = 󰇸
-ramp-signal-2 = 󰇶
-ramp-signal-3 = 
-ramp-signal-4 = 
+ramp-signal-0 = 󰤯
+ramp-signal-1 = 󰤟
+ramp-signal-2 = 󰤢
+ramp-signal-3 = 󰤥
+ramp-signal-4 = 󰤨
 
 [module/date]
 type = internal/date
